# voting_rules_and_distortion

./: .gitignore  README.md  preflibtests.py  pyproject.toml  ranking_generator.py  requirements.txt  testing.py  voting_rules.py
src/: data_parser.py  preflibtests.py  ranking_generator.py
src/distortion/: multi_winner_distortion.py  rand_distortion.py  social_welfare.py
src/tools_for_distortion/: ranking_generator.py
src/tools_for_distortion/distortion/: __init__.py  det_distortion.py  multi_winner_distortion.py  rand_distortion.py  social_welfare.py
src/tools_for_distortion/utils/: __init__.py  normalization.py
src/tools_for_distortion/voting_rules/: __init__.py  borda.py  boutilier.py  harmonic.py  irv.py  k_approval.py  plurality.py  stv.py
src/utils/: scoring_rules.py  validators.py
src/voting_rules/: borda.py  boutilier.py  voting_rules_and_distortion.py
tests/: test_preflib.py  test_ranking_generator.py  test_sw_dist_util.py  test_voting_rules.py
