[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "voting_rules"
version = "0.1.0"
description = "A library for distortion in utilitarian social choice theory"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ashley Dong", email = "s2015258@ed.ac.uk"}
]
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "preflibtools"
]

[project.urls]
"Homepage" = "https://github.com/AshleyDong34/voting_rules_and_distortion"
