[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tools_for_distortion"
version = "0.2.0"
description = "A brief description of your package"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "preflibtools",
    # other dependencies
]

[project.urls]
"Homepage" = "https://github.com/AshleyDong34/voting_rules_and_distortion"
"Repository" = "https://github.com/AshleyDong34/voting_rules_and_distortion"

[tool.flit.metadata]
module = "tools_for_distortion"
package-dir = "src"
